--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "nprogress": "^0.2.0",
+    "vue": "^3.5.12",
+    "vue-i18n": "^10.0.4",
+    "vue-router": "^4.4.5",
+    "vue3-leaflet": "^1.0.50",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
