--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "nprogress": "^0.2.0",
