--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "nprogress": "^0.2.0",
     "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2",
     "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5",
     "vue3-leaflet": "^1.0.50",
