--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "nprogress": "^0.2.0",
+    "sweetalert": "^2.1.2",
     "vue": "^3.5.12",
     "vue-chartjs": "^5.3.2",
     "vue-i18n": "^10.0.4",
