--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
+    "compiler": "^0.1.2",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
