--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
     "nprogress": "^0.2.0",
+    "pinia": "^2.3.0",
     "sweetalert": "^2.1.2",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
